# practice-disjoint_sets

./: .dockerignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  build  conanfile.txt  cppcheck_suppress.txt  docker-build  docker-run  docker-stop
src/: CMakeLists.txt  grouping.cpp  json.cpp  main.cpp
src/include/: grouping.hpp  json.hpp  types.hpp
src/tests/: CMakeLists.txt  bench.cpp  test.cpp
